        PR rtl-optimization/42294         * sel-sched.c (try_replace_dest_reg): When chosen register         and original register is the same, do not bail out early, but         still check all original insns for validity of replacing destination         register.  Set EXPR_TARGET_AVAILABLE to 1 before leaving function         in this case.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155889 138bc75d-0d04-0410-961f-82ee72b054a4